sumo/tests/duarouter/trips/errors/vehicle_false_arrivallane/errors.duarouter
Error: Invalid arrivalLane definition for vehicle ''
Quitting (on error).
